Updated logging commands