@@ -1,7 +1,5 @@
 package me.szumielxd.portfel.proxy.commands.log;
 
-import static net.kyori.adventure.text.format.NamedTextColor.*;
-
 import java.sql.Date;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -17,38 +15,43 @@ import java.util.stream.Stream;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import lombok.Getter;
 import me.szumielxd.portfel.api.Portfel;
 import me.szumielxd.portfel.api.objects.CommonSender;
 import me.szumielxd.portfel.api.objects.User;
-import me.szumielxd.portfel.common.Lang;
-import me.szumielxd.portfel.common.Lang.LangKey;
 import me.szumielxd.portfel.common.commands.AbstractCommand;
 import me.szumielxd.portfel.common.commands.CmdArg;
 import me.szumielxd.portfel.common.commands.SimpleCommand;
+import me.szumielxd.portfel.common.lang.Lang;
+import me.szumielxd.portfel.common.lang.Lang.LangKey;
+import me.szumielxd.portfel.common.lang.draft.MessageDraft;
 import me.szumielxd.portfel.common.utils.MiscUtils;
 import me.szumielxd.portfel.proxy.PortfelProxyImpl;
 import me.szumielxd.portfel.proxy.commands.CommonArgs;
 import me.szumielxd.portfel.proxy.database.AbstractDBLogger.ActionType;
 import me.szumielxd.portfel.proxy.database.AbstractDBLogger.LogEntry;
 import me.szumielxd.portfel.proxy.database.AbstractDBLogger.NumericCondition;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.event.ClickEvent;
+import me.szumielxd.portfel.proxy.lang.ProxyLangKey;
 
-public class ReadLogCommand extends SimpleCommand {
+public class ReadLogCommand<C> extends SimpleCommand<C> {
 	
 	private List<String> signs = Arrays.asList("!", "<", ">");
 	private Pattern numCond = Pattern.compile("\\d+");
 	private Pattern extNumCond = Pattern.compile("[<>!]?\\d+(-\\d+)?");
 	
-	private List<CmdArg> args = Arrays.asList(
-			CommonArgs.PAGENUMBER,
+	@Getter private List<CmdArg> staticArgs = List.of(
+				CommonArgs.PAGENUMBER
+			);
+	@Getter private List<CmdArg> flyingArgs = List.of(
 			CommonArgs.PAGESIZE,
-			new CmdArg(true, "targets=", LangKey.COMMAND_ARGTYPES_LOGTARGET_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGTARGET_DESCRIPTION, null, str -> str.split(","), (s, arr) -> {
+			new CmdArg(true, "targets=", ProxyLangKey.COMMAND_ARGTYPES_LOGTARGET_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGTARGET_DESCRIPTION, null, str -> str.split(","), (s, arr) -> {
 				String arg = arr[arr.length-1];
 				String prefix = "targets=";
 				String[] elements = arg.substring(prefix.length()).split(",", -1);
 				String[] prefixes = Arrays.copyOf(elements, elements.length-1);
-				List<String> prefixesLower = Stream.of(prefixes).map(String::toLowerCase).collect(Collectors.toList());
+				List<String> prefixesLower = Stream.of(prefixes)
+						.map(String::toLowerCase)
+						.toList();
 				prefix += String.join(",", prefixes);
 				arg = elements[elements.length-1];
 				if (!prefix.isEmpty()) prefix += ",";
@@ -56,12 +59,14 @@ public class ReadLogCommand extends SimpleCommand {
 				list.add(prefix+",");
 				return list;
 			}),
-			new CmdArg(true, "executors=", LangKey.COMMAND_ARGTYPES_LOGEXECUTOR_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGEXECUTOR_DESCRIPTION, null, str -> str.split(","), (s, arr) -> {
+			new CmdArg(true, "executors=", ProxyLangKey.COMMAND_ARGTYPES_LOGEXECUTOR_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGEXECUTOR_DESCRIPTION, null, str -> str.split(","), (s, arr) -> {
 				String arg = arr[arr.length-1];
 				String prefix = "executors=";
 				String[] elements = arg.substring(prefix.length()).split(",", -1);
 				String[] prefixes = Arrays.copyOf(elements, elements.length-1);
-				List<String> prefixesLower = Stream.of(prefixes).map(String::toLowerCase).collect(Collectors.toList());
+				List<String> prefixesLower = Stream.of(prefixes)
+						.map(String::toLowerCase)
+						.toList();
 				prefix += String.join(",", prefixes);
 				arg = elements[elements.length-1];
 				if (!prefix.isEmpty()) prefix += ",";
@@ -69,22 +74,28 @@ public class ReadLogCommand extends SimpleCommand {
 				list.add(prefix+",");
 				return list;
 			}),
-			new CmdArg(true, "servers=", LangKey.COMMAND_ARGTYPES_LOGSERVER_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGSERVER_DESCRIPTION, null, str -> str.split(","), (s, arr) -> Arrays.asList(arr[arr.length-1]+",")),
-			new CmdArg(true, "orders=", LangKey.COMMAND_ARGTYPES_LOGORDER_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGORDER_DESCRIPTION, null, str -> str.split(","), (s, arr) -> Arrays.asList(arr[arr.length-1]+",")),
-			new CmdArg(true, "actions=", LangKey.COMMAND_ARGTYPES_LOGACTION_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGACTION_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(ActionType::parse).filter(Objects::nonNull).toArray(ActionType[]::new), (s, arr) -> {
+			new CmdArg(true, "servers=", ProxyLangKey.COMMAND_ARGTYPES_LOGSERVER_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGSERVER_DESCRIPTION, null, str -> str.split(","), (s, arr) -> Arrays.asList(arr[arr.length-1]+",")),
+			new CmdArg(true, "orders=", ProxyLangKey.COMMAND_ARGTYPES_LOGORDER_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGORDER_DESCRIPTION, null, str -> str.split(","), (s, arr) -> Arrays.asList(arr[arr.length-1]+",")),
+			new CmdArg(true, "actions=", ProxyLangKey.COMMAND_ARGTYPES_LOGACTION_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGACTION_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(ActionType::parse).filter(Objects::nonNull).toArray(ActionType[]::new), (s, arr) -> {
 				String arg = arr[arr.length-1];
 				String prefix = "actions=";
 				String[] elements = arg.substring(prefix.length()).split(",", -1);
 				String[] prefixes = Arrays.copyOf(elements, elements.length-1);
-				List<String> prefixesLower = Stream.of(prefixes).map(String::toLowerCase).collect(Collectors.toList());
+				List<String> prefixesLower = Stream.of(prefixes)
+						.map(String::toLowerCase)
+						.toList();
 				prefix += String.join(",", prefixes);
 				arg = elements[elements.length-1];
 				if (!prefix.isEmpty()) prefix += ",";
-				List<String> list = Stream.of(ActionType.values()).map(ActionType::name).filter(str -> !prefixesLower.contains(str)).map(prefix::concat).collect(Collectors.toList());
+				List<String> list = Stream.of(ActionType.values())
+						.map(ActionType::name)
+						.filter(str -> !prefixesLower.contains(str))
+						.map(prefix::concat)
+						.toList();
 				list.add(prefix+",");
 				return list;
 			}),
-			new CmdArg(true, "values=", LangKey.COMMAND_ARGTYPES_LOGVALCOND_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGVALCOND_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(NumericCondition::parse).filter(Optional::isPresent).map(Optional::get).toArray(NumericCondition[]::new), (s, arr) -> {
+			new CmdArg(true, "values=", ProxyLangKey.COMMAND_ARGTYPES_LOGVALCOND_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGVALCOND_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(NumericCondition::parse).filter(Optional::isPresent).map(Optional::get).toArray(NumericCondition[]::new), (s, arr) -> {
 				String arg = arr[arr.length-1];
 				String prefix = "values=";
 				String[] elements = arg.substring(prefix.length()).split(",", -1);
@@ -100,7 +111,7 @@ public class ReadLogCommand extends SimpleCommand {
 				list.replaceAll(prefix::concat);
 				return list;
 			}),
-			new CmdArg(true, "balances=", LangKey.COMMAND_ARGTYPES_LOGBALCOND_DISPLAY, LangKey.COMMAND_ARGTYPES_LOGBALCOND_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(NumericCondition::parse).filter(Optional::isPresent).map(Optional::get).toArray(NumericCondition[]::new), (s, arr) -> {
+			new CmdArg(true, "balances=", ProxyLangKey.COMMAND_ARGTYPES_LOGBALCOND_DISPLAY, ProxyLangKey.COMMAND_ARGTYPES_LOGBALCOND_DESCRIPTION, null, str -> Stream.of(str.split(",")).map(NumericCondition::parse).filter(Optional::isPresent).map(Optional::get).toArray(NumericCondition[]::new), (s, arr) -> {
 				String arg = arr[arr.length-1];
 				String prefix = "balances=";
 				String[] elements = arg.substring(prefix.length()).split(",", -1);
@@ -119,20 +130,27 @@ public class ReadLogCommand extends SimpleCommand {
 	);
 	
 
-	public ReadLogCommand(@NotNull Portfel plugin, @NotNull AbstractCommand parent) {
+	public ReadLogCommand(@NotNull Portfel<C> plugin, @NotNull AbstractCommand<C> parent) {
 		super(plugin, parent, "read", "get");
 	}
 
 	@Override
-	public void onCommand(@NotNull CommonSender sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
-		Object[] parsed = this.validateArgs(sender, args);
-		if (parsed != null) {
+	public void onCommand(@NotNull CommonSender<C> sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
+		this.parseArguments(sender, args).ifPresent(parsed -> {
 			try {
-				List<LogEntry> logs = ((PortfelProxyImpl)this.getPlugin()).getTransactionLogger().getLogs((String[])parsed[2], (String[])parsed[3], (String[])parsed[4], (String[])parsed[5], (ActionType[])parsed[6], (NumericCondition[])parsed[7], (NumericCondition[])parsed[8]);
+				List<LogEntry> logs = ((PortfelProxyImpl<C>)this.getPlugin()).getTransactionLogger()
+						.getLogs(
+								(String[])parsed.flyingArgs()[1],
+								(String[])parsed.flyingArgs()[2],
+								(String[])parsed.flyingArgs()[3],
+								(String[])parsed.flyingArgs()[4],
+								(ActionType[])parsed.flyingArgs()[5],
+								(NumericCondition[])parsed.flyingArgs()[6],
+								(NumericCondition[])parsed.flyingArgs()[7]);
 				
-				int size = parsed[1] != null ? (int)parsed[1] : 5;
-				int maxPage = (int) Math.ceil(logs.size()/(double)size);
-				int page = parsed[0] != null ? (int)parsed[0] : maxPage;
+				int size = Optional.ofNullable((int) parsed.flyingArgs()[0]).orElse(5);
+				int maxPage = (int) Math.ceil(logs.size() / (double) size);
+				int page = Optional.ofNullable((int) parsed.staticArgs()[0]).orElse(maxPage);
 				
 				int offset = Math.max(0, (page-1)*size);
 				if (offset >= logs.size()) {
@@ -140,40 +158,40 @@ public class ReadLogCommand extends SimpleCommand {
 					offset = 0;
 				}
 				
-				Component header = Portfel.PREFIX.append(LangKey.COMMAND_LOG_READ_HEADER.component(DARK_PURPLE)).append(Component.text(" (", GRAY).append(
-						LangKey.COMMAND_LOG_READ_PAGE.component(Component.text(page, WHITE), Component.text(maxPage, WHITE))).append(Component.text(")")));
-				sender.sendTranslated(header);
+				ProxyLangKey.COMMAND_LOG_READ_HEADER.draft(page, maxPage)
+						.sendPrefixed(sender);
 				Lang lang = Lang.get(sender);
 				for (int i = 0; i < size; i++) {
 					if (i + offset < logs.size()) {
 						LogEntry log = logs.get(i + offset);
-						Component exec = this.prepareInteractive(Component.text(log.getExecutor().getDisplayName() + "@" + log.getServer(), GREEN), log.getExecutor().getDisplayName(), log.getExecutor().getUniqueId());
-						Component target = this.prepareInteractive(Component.text(log.getTargetName(), AQUA), log.getTargetName(), log.getTargetUniqueId());
-						Component valComp = Component.text(log.getType().format(String.valueOf(log.getValue())), log.getType().getColor()).hoverEvent(Component.text(log.getType().format(String.valueOf(log.getValue())), log.getType().getColor())
-								.append(Component.newline()).append(LangKey.LOG_VALUE_ACTION.component(GRAY, Component.text(log.getType().name(), AQUA))).append(Component.newline())
-								.append(LangKey.LOG_VALUE_OLD_BALANCE.component(GRAY, Component.text(log.getBalance(), AQUA))));
-						Component logLine = Portfel.PREFIX.append(Component.text("#"+log.getLogId(), LIGHT_PURPLE)).append(Component.text(" (", DARK_GRAY))
-								.append(LangKey.COMMAND_LOG_READ_TIME_AGO.component(GRAY, Component.text(MiscUtils.formatDuration(lang, System.currentTimeMillis()-log.getTime().getTime(), true))))
-								.append(Component.text(") (", DARK_GRAY)).append(exec).append(Component.text(") [", DARK_GRAY)).append(target).append(Component.text("]", DARK_GRAY)).append(Component.newline())
-								.append(Portfel.PREFIX).append(Component.text("> ", GRAY)).append(Component.text(log.getOrderName(), WHITE).hoverEvent(Component.text(log.getOrderName(), WHITE).append(Component.newline())
-										.append(LangKey.LOG_VALUE_DATE.component(GRAY, Component.text(new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date(log.getTime().getTime())), AQUA))))).append(Component.space()).append(valComp);
-						sender.sendTranslated(logLine);
+						ProxyLangKey.COMMAND_LOG_READ_LINE1.draft(
+								"#" + log.getLogId(),
+								MiscUtils.formatDuration(lang, System.currentTimeMillis() - log.getTime().getTime(), true),
+								ProxyLangKey.LOG_MESSAGE_LINE1.draft(
+										prepareInteractive(MessageDraft.plain(log.getExecutor().getDisplayName() + "@" + log.getServer()), log.getExecutor().getDisplayName(), log.getExecutor().getUniqueId()),
+										prepareInteractive(MessageDraft.plain(log.getTargetName()), log.getTargetName(), log.getTargetUniqueId())))
+								.sendPrefixed(sender);
+						ProxyLangKey.LOG_MESSAGE_LINE2.draft(
+								ProxyLangKey.LOG_ACTION_AMOUNT.draft(
+										log.getType().draft(log.getValue()),
+										log.getType().name(),
+										log.getValue()),
+								ProxyLangKey.LOG_ACTION_NAME.draft(
+										log.getOrderName(),
+										new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date(log.getTime().getTime()))))
+								.sendPrefixed(sender);
+						
 					}
 				}
 			} catch (Exception e) {
 				e.printStackTrace();
 			}
-		}
-	}
-
-	@Override
-	public @NotNull List<CmdArg> getArgs() {
-		return this.args;
+		});
 	}
 
 	@Override
 	public @NotNull LangKey getDescription() {
-		return LangKey.COMMAND_LOG_READ_DESCRIPTION;
+		return ProxyLangKey.COMMAND_LOG_READ_DESCRIPTION;
 	}
 	
 	
@@ -186,11 +204,8 @@ public class ReadLogCommand extends SimpleCommand {
 		}
 	}
 	
-	private @NotNull Component prepareInteractive(@NotNull Component comp, @NotNull String name, @NotNull UUID uuid) {
-		return comp.hoverEvent(Component.text(uuid.toString(), AQUA)
-				.append(Component.newline()).append(Component.text("» ", DARK_GRAY)).append(LangKey.LOG_SUGGEST.component(GRAY))
-				.append(Component.newline()).append(Component.text("» ", DARK_GRAY)).append(LangKey.LOG_INSERT.component(GRAY)))
-				.clickEvent(ClickEvent.suggestCommand(name)).insertion(uuid.toString());
+	private @NotNull MessageDraft prepareInteractive(@NotNull MessageDraft draft, @NotNull String name, @NotNull UUID uuid) {
+		return ProxyLangKey.LOG_USER_INTERACTIVE.draft(draft, name, uuid);
 	}
 
 }
